fix problem in Chrome with Ortho sidebar not fitting title move some very specific css to its own files move socmedia css to common (from wdk)
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/OrthoMCLWebsite/trunk@51610 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/common.css
+++ b/Site/webapp/wdkCustomization/css/common.css
@@ -1,6 +1,6 @@
-
-/*~~~~~~~~~~~~~~~~~~ main content pane ~~~~~~~~~~~~~~~~~~*/
-
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+      =main content pane
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /* optional class to buffer main content */
 div.buffered-content {
   margin: 6px;
@@ -21,37 +21,36 @@ p.indented {
   margin-left: 11px;
 }
 
-/*~~~~~~~~~~~~~ Proteome Upload Form ~~~~~~~~~~~~~*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+      =HEADER 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-div.prot-upload {
-  margin-left: auto;
-  margin-right: auto;
-  width: 620px;
-  line-height: 1.2;
+#header2 {min-width:975px; clear:both;}
+
+div#header2 .ui-widget-content {
+  background:0;
+  border:0;
 }
 
-div.prot-upload h2 {
-  text-align: center;
-  margin: 8px 0 15px 0;
+#header-control {float:right; text-align: right; margin: 7px; }
+#header2 #quick-search, #header2 #tool-sets { margin: 5px; }
+#header2 #quick-search input.search-box { width: 100px; }
+#header2 #site-logo a {font:bold 50pt Georgia,serif; color:#3333FF; text-decoration:none;}
+
+
+table#quick-search a {
+  font-size:120%;
 }
 
-div.prot-upload p {
-  margin: 0 0 11px 22px;
+#nav-top .socmedia-link {
+  position: relative;
+  bottom: 3px;
 }
 
-div.prot-upload ul {
-  margin: 5px 0 5px 33px;
-  list-style: inside disc;
-}
-
-div.prot-upload .indent3 {
-  margin-left: 33px;
-}
-
-div.prot-upload #upload-form {
-  margin-left: auto;
-  margin-right: auto;
-  width: 450px;
+#nav-top .socmedia-link-twitter {
+  position: relative;
+  bottom: 2px;
+  left:2px;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -79,66 +78,6 @@ div.prot-upload #upload-form {
 
 .contact-us td {
   vertical-align: top;
-}
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-      =ABOUT page
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-div#about {
-  width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-}
-
-div#about div {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-div#about h1 { font-size: 28px; }
-div#about h2 { font-size: 16px; }
-div#about p { margin: 15px; }
-div#about .question { font-weight:bold; }
-
-div#about .about-nav {
-  width: 70%;
-  text-align: right;
-}
-
-div#about .about-title {
-  width: 70%;
-  text-align: center;
-}
-
-div#about .section-title {
-  width: 70%;
-  padding: 6px;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -khtml-border-radius: 20px;
-  border-radius: 20px;
-}
-
-div#about .section-title a {
-  float: right;
-}
-
-div#about .section-content {
-  width: 65%;
-  padding: 15px;
-  font-size: 14px;
-  text-align: left;
-}
-
-div#about ol {
-  margin-left: 40px;
-  list-style-position: outside;
-  list-style-type: decimal;
-}
-
-div#about li {
-  padding-top: 5px;
 }
 
 
@@ -180,25 +119,6 @@ div#about li {
 #footer #contact { float: right; text-align: right; font-size:120%;}
 
 
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-      =HEADER 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-#header2 {min-width:975px; clear:both;}
-
-div#header2 .ui-widget-content {
-  background:0;
-  border:0;
-}
-
-#header-control {float:right; text-align: right; margin: 7px; }
-#header2 #quick-search, #header2 #tool-sets { margin: 5px; }
-#header2 #quick-search input.search-box { width: 100px; }
-#header2 #site-logo a {font:bold 50pt Georgia,serif; color:#3333FF; text-decoration:none;}
-
-
-table#quick-search a {
-  font-size:120%;
-}
 
 
