--- a/Site/webapp/wdkCustomization/css/home.css
+++ b/Site/webapp/wdkCustomization/css/home.css
@@ -19,7 +19,7 @@
 #sidebar { 
   clear: both;
 	float: left; 
-	width: 208px;
+	width: 211px;
 	margin: 5px 5px 5px 5px; 
 	font-size:12px;	
 }
